--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- pom.xml -->
     <groupId>com.labs.game</groupId>
     <artifactId>cart-service</artifactId>
+    <!-- <version>0.0.1-SNAPSHOT</version> this is the one to remove -->
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
