--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cart-service-svc-XX
+  name: cart-service-svc-26
   namespace: lab-london
 spec:
   ports:
     - port: 8080
   selector:
-    app: cart-service-XX
+    app: cart-service-26
   type: NodePort
